Fixed right arrow not showing and implemented scroll swipe

--- a/src/components/Movies/style.css
+++ b/src/components/Movies/style.css
@@ -7,7 +7,11 @@
 
 #Movies ul {
   display: flex;
-  overflow-x: hidden;
+  overflow-x: scroll;
   scroll-behavior: smooth;
   height: 100%;
+}
+
+#Movies ul::-webkit-scrollbar {
+  display: none;
 }
